3/27 - Added navigation drawer for spotify.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,10 @@
             android:name=".ContactUsActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
+        <activity
+            android:name=".SpotifyActivity"
+            android:label="@string/title_activity_spotify"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
