3/26 - Updated Contact Activity with Nav Bar. Needs Buttons and Background.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,10 @@
         <activity
             android:name=".SpotifyActivity"
             android:label="@string/title_activity_spotify"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".ContactActivity"
+            android:label="@string/title_activity_contact"
             android:theme="@style/AppTheme"></activity>
     </application>
 
