3/29 - Added Menu subpages

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,26 @@
             android:name=".MenuActivity"
             android:label="@string/title_activity_menu"
             android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".MenuBubbleTeaActivity"
+            android:label="@string/title_activity_bubble_tea"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".MenuBrewedTeaActivity"
+            android:label="@string/title_activity_brewed_tea"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".MenuSmoothieActivity"
+            android:label="@string/title_activity_smoothie"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".MenuMilkshakeActivity"
+            android:label="@string/title_activity_menu_milkshake"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".MenuCoffeeActivity"
+            android:label="@string/title_activity_menu_coffee"
             android:theme="@style/AppTheme"></activity>
     </application>
 
