--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
             android:name=".LandingPage"
             android:label="@string/title_activity_landing_page"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustPan"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".OrderActivity"
