--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,11 +41,8 @@
             android:name=".LandingPage"
             android:label="@string/title_activity_landing_page"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustPan"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".OrderActivity"
-            android:screenOrientation="portrait" />
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity
             android:name=".SpotifyActivity"
             android:label="@string/title_activity_spotify"
@@ -80,7 +77,12 @@
         <activity
             android:name=".MenuCoffeeActivity"
             android:label="@string/title_activity_menu"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".OrderActivity"
+            android:label="@string/title_activity_order"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".PaymentDetails"></activity>
     </application>
 
 </manifest>
