4/19 - Updated Forgot Password

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,7 +82,8 @@
             android:name=".OrderActivity"
             android:label="@string/title_activity_order"
             android:theme="@style/AppTheme" />
-        <activity android:name=".PaymentDetails"></activity>
+        <activity android:name=".PaymentDetails" />
+        <activity android:name=".ForgotPassword3"></activity>
     </application>
 
 </manifest>
